--- a/package.json
+++ b/package.json
@@ -3,75 +3,86 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
+    "clean-dev": "npx kill-port 3000 && next dev -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint",
+    "format": "prettier --write .",
+    "lint-staged": "lint-staged",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "prepare": "husky"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.0",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
+    "@headlessui/react": "^2.2.2",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.6.0",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.10",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/supabase-js": "^2.39.3",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.7",
+    "@radix-ui/react-toast": "^1.2.10",
+    "@radix-ui/react-tooltip": "^1.2.3",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "detect-node-es": "^1.1.0",
     "geist": "^1.3.1",
-    "lucide-react": "^0.331.0",
+    "lucide-react": "^0.501.0",
+    "nanoid": "^5.1.5",
     "next": "^15.3.1",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "recharts": "^2.12.0",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.6.7",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^2.6.0",
+    "source-map-js": "^1.2.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "22.14.1",
     "@types/react": "19.1.2",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@types/react-dom": "19.1.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.25.0",
+    "eslint-config-next": "15.3.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prisma": "^5.10.0",
-    "tailwindcss": "^3.4.1",
+    "lint-staged": "^15.5.1",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
+    "postcss-nesting": "^13.0.1",
+    "prettier": "^3.5.3",
+    "prisma": "^6.6.0",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.8.3"
   }
 }
